--- a/flex-grid.html
+++ b/flex-grid.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Flex-Grid</title>
-    <link rel="stylesheet" src="flex-grid.css" />
+    <link rel="stylesheet" href="flex-grid.css" />
   </head>
   <body>
-    <header>
+    <header class="container">
       <div class="row">
         <div class="col-4 logo">LOGO</div>
         <div class="col-8 menu">MENU</div>
